route in portal product updates, pdp text spacing fix

--- a/src/styles/sections/theme/theme-header-main.scss
+++ b/src/styles/sections/theme/theme-header-main.scss
@@ -96,6 +96,7 @@
 .c-headerMain__secondary {
   .c-headerMain__account,
   button,
+  .c-button,
   .c-button--isHollow {
     // padding: 1rem 0;
     padding: 0.85rem;
